fix: fix vertical line align and horizontal ruler text

--- a/src/scss/sheet/workspace/_table_grid.scss
+++ b/src/scss/sheet/workspace/_table_grid.scss
@@ -11,7 +11,7 @@
         }
         .v-lines .line {
             top: 0;
-            height: 200px;
+            width: 72px;
             border-right: 1px solid $table-grid-cell-border-color;
         }
         .line {
